# commons-auth-api/src/main/java/io/rocketbase/commons/dto/forgot/ForgotPasswordRequest.java
@@ -18,4 +18,12 @@ public class ForgotPasswordRequest implements Serializable {
 
     @Email
     private String email;
+
+    /**
+     * optional parameter to overwrite system default
+     * <p>
+     * full qualified url to a custom UI that proceed the verification<br>
+     * * ?verification=VALUE will get append
+     */
+    private String verificationUrl;
 }
